kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb-deployment
  labels:
    app: hello
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        image: boxrick/502-example2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        # Overwrite the port in the docker image
        lifecycle:
          preStop:
            exec:
              command:
              - "/bin/bash"
              - "-c"
              - "apachectl -k graceful-stop && sleep 15"
        readinessProbe:
          httpGet:
            scheme: HTTPS
            port: 443
            path: /favicon.ico
          failureThreshold: 2
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 10
