kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb-ingress
  labels:
    app: hello
  annotations:
    networking.gke.io/managed-certificates: helloweb-managed-cert
spec:
  backend:
    serviceName: helloweb-service
    servicePort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-service
  labels:
    app: hello
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"helloweb-tls":"HTTPS"}'
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - name: helloweb-tls
    port: 443
    targetPort: 443
